<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/layoutClientes">


  <androidx.cardview.widget.CardView
      android:layout_width="409dp"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      app:cardCornerRadius="5dp"
      app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/vista">

      <ImageView
          android:id="@+id/imageViewc"
          android:layout_width="89dp"
          android:layout_height="match_parent"
          android:contentDescription="imagen"
          tools:srcCompat="@drawable/c" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="2dp"
            android:text="@string/Nombre"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="2dp"
            android:text="@string/tipo"
            android:textSize="25sp"
            android:textStyle="bold" />



        <TextView
            android:id="@+id/documento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/ic_baseline_assignment_ind_24"
            android:drawablePadding="2dp"
            android:text="@string/Id" />

        <TextView
            android:id="@+id/laOcupacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/ic_baseline_work_24"
            android:drawablePadding="2dp"
            android:text="@string/Ocupacion" />


        <TextView
            android:id="@+id/fechaIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="0dp"
            android:drawableLeft="@drawable/ic_baseline_date_range_24"
            android:drawablePadding="2dp"
            android:text="@string/Date" />




      </LinearLayout>


      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|end"
            android:layout_marginEnd="10dp"
            android:contentDescription="imagen"
            android:src="@drawable/ic_baseline_delete"
            app:layout_constraintEnd_toEndOf="parent" />


      </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


  </androidx.cardview.widget.CardView>


</LinearLayout>